--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.visionapp">
-    <uses-feature android:name="android.hardware.camera.any" />
-    <!--get camera permission-->
+
+    <uses-feature android:name="android.hardware.camera.any" /> <!-- get camera permission -->
     <uses-permission android:name="android.permission.CAMERA" />
+
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.TTS_SERVICE" />
+        </intent>
+    </queries>
 
     <application
         android:allowBackup="true"
@@ -12,6 +18,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VisionApp">
+        <activity
+            android:name=".ttsPageTesting"
+            android:exported="false" />
+        <activity
+            android:name=".TextToSpeech"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
