--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.visionapp">
+    package="com.example.visionapp" >
+
     <uses-feature android:name="android.hardware.camera.any" />
-    <!--get camera permission-->
+
+    <!-- get camera permission -->
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -11,9 +13,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.VisionApp">
+        android:theme="@style/Theme.VisionApp" >
+
         <activity
             android:name=".MainActivity"
+            android:exported="true"/>
+
+        <activity
+            android:name=".SplashScreen"
+            android:theme="@style/Theme.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
