--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -49,4 +50,5 @@ dependencies {
     implementation "androidx.camera:camera-camera2:1.1.0-alpha03"
     implementation "androidx.camera:camera-lifecycle:1.1.0-alpha03"
     implementation "androidx.camera:camera-view:1.0.0-alpha23"
+
 }
