--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,10 @@
     <!-- get camera permission -->
     <uses-permission android:name="android.permission.CAMERA" />
 
+    <!-- get internet permission -->
+    <!-- TODO: internet gaharus selalu on -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
