--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,10 @@ dependencies {
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+
+    // Material Design
+    implementation 'com.google.android.material:material:1.6.1'
+
+    // Rounded Image View
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
