--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,9 @@ dependencies {
 
     // Rounded Image View
     implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    //coroutines
+    def coroutines_version = "1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 }
